public/css/partials/_map.scss
.map-options {
  margin-top: 4em;
}

.map-reader {
  width: 100%;
  height: auto;
  text-align: center;
  background-color: #9c27b0;
  color: white;
  padding-top: 1em;
  padding-bottom: 1em;
}
.map-title {
  text-align: center;
}
.map-title-text {
  padding-top: 5%;
  margin: 0;
}

.card {
  font-size: .8em;
  padding: 1em;
  border-bottom: 4px solid rgb(228, 96, 0);
  background-color: white;
}

.map-description {
  background-color: #e1bee7;
  height: 100%;
}

.map-page-header {
  background-color: $purple-header;
  text-align: center;
  height: 30%;
  color: white;
}

.map-page-header h3 {
  color: white;
}

.info-section {
  background-color: $background2;
  height: 70vh;
}

.map-wrapper {
  height: 70vh;
  background-color: $background2;
  text-align: center;
  padding-top: 1em;
}

.map {
  height: 100%;
}

.map-info-wrapper {
  height: 70vh;
  text-align: center;
  padding-top: 5em;
}

.map-cards {
  padding-top: 2em;
}

.map-card {
  background-color: white;

  p:first-of-type {
    font-size: 1.2em;
    font-weight: 400;
  }
  p:last-of-type {
    font-size: 1.2em;
  }
}

#mapPage {
  background-color: $background2;
}

@media (min-width: 768px) {
  .map-reader {
    padding-left: 30%;
    padding-right: 30%;
  }
}
.title-map {
  padding-top: 30px;
}
.title-p {
  padding-bottom: 30px;
}

.switch-wrapper {
  position: relative;
  display: inline-block;
  width: 0px;
  top: 20px;
  height: 84px;
}

.switch-button {
  width: 400px;
  height: 40px;
  position: relative;
  display: inline-block;
  -webkit-transform: translate3D(-50%, -50%, 0);
          transform: translate3D(-50%, -50%, 0);
  will-change: transform;
  z-index: 197 !important;
  cursor: pointer;
  -webkit-transition: .3s ease all;
  transition: .3s ease all;
  border: 1px solid white;
  color: #674A7F;
}
.switch-button-case {
  display: inline-block;
  background: none;
  width: 49%;
  height: 100%;
  color: #674A7F;
  position: relative;
  border: none;
  -webkit-transition: .3s ease all;
  transition: .3s ease all;
  text-transform: uppercase;
  letter-spacing: 5px;
  padding-bottom: 1px;
}
.switch-button-case:hover {
  color: grey;
  cursor: pointer;
}
.switch-button-case:focus {
  outline: none;
}
.switch-button .active-switch {
  color: #674A7F;
  background-color: white;
  position: absolute;
  left: 0;
  top: 0;
  width: 50%;
  height: 100%;
  z-index: -1;
  -webkit-transition: .3s ease-out all;
  transition: .3s ease-out all;
}
.switch-button .active-case {
  color: #674A7F;
}

